# data-projects

./: .buildinfo  .tool-versions  README.md  _config.yml  _toc.yml  genindex.html  intro.html  markdown-notebooks.html  n2doku_adj_mtx.html  objects.inv  pyproject.toml  search.html  searchindex.js  species-data.html
_build/.doctrees/: README.doctree  environment.pickle  intro.doctree
_build/.doctrees/ndoku-julia/: intro.doctree
_build/.doctrees/ottawa-trees/: intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  species-data.doctree
_build/.jupyter_cache/: global.db
_build/html/: .buildinfo  README.html  search.html
_build/html/ottawa-trees/: markdown.html  notebooks.html
_build/jupyter_execute/ndoku-julia/: n2doku_adj_mtx.ipynb
_build/jupyter_execute/ottawa-trees/: markdown-notebooks.ipynb  species-data.ipynb
_sources/: README.md  intro.md  tree-stats.ipynb
_sources/ottawa-trees/: species-data.ipynb
ndoku/: _toc.yml  intro.md  n2doku.ipynb
ndoku-julia/: _config.yml  _toc.yml  intro.html  n2doku_adj_mtx.html  n2doku_adj_mtx.ipynb
ndoku-julia/_build/.doctrees/: environment.pickle  intro.doctree  n2doku_adj_mtx.doctree
ndoku-julia/_build/.jupyter_cache/: global.db
ndoku-julia/_build/html/: genindex.html  n2doku_adj_mtx.html  search.html
ndoku-julia/ndoku-julia/: Manifest.toml  Project.toml
ottawa-trees/: _toc.yml  intro.html  intro.md  markdown-notebooks.html  requirements.txt  species-data.html  species-data.ipynb  tree-stats.ipynb
ottawa-trees/_build/.doctrees/: intro.doctree  (+6 more)
ottawa-trees/data/: species-data.csv
(+34 files in other folders)
