[project]
name = "data-projects"
version = "0.1.0"
description = ""
authors = [
    {name = "alexandre-f-ouellette",email = "alexandre.f.ouellette@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.25.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
